# finapi-webform-and-access

./: .gitignore  LICENSE  README.md  pyproject.toml
src/finapi_access/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/finapi_access/api/: __init__.py  accounts_api.py  authorization_api.py  bank_connections_api.py  banks_api.py  categories_api.py  client_configuration_api.py  labels_api.py  mandator_administration_api.py  mocks_and_tests_api.py  notification_rules_api.py  payments_api.py  pending_transactions_api.py  securities_api.py  standing_orders_api.py  tpp_certificates_api.py  tpp_credentials_api.py  transactions_api.py  users_api.py
src/finapi_access/models/: __init__.py  access_token.py  account.py  account_capability.py  account_interface.py  account_interface_payment_capabilities.py  account_list.py  account_params.py  account_reference.py  account_status.py  account_type.py  bad_credentials_error.py  bank.py  bank_connection.py  bank_connection_interface.py  bank_connection_list.py  bank_connection_owner.py  bank_consent.py  bank_consent_status.py  bank_group.py  bank_image.py  bank_interface.py  bank_interface_login_field.py  bank_interface_payment_capabilities.py  bank_interface_payment_constraints.py  bank_interface_property.py  banking_interface.py  cash_flow.py  cash_flow_list.py  categorization_check_result.py  categorization_check_results.py  categorization_rule_direction.py  categorization_status.py  category.py  category_params.py  (+124 more)
src/finapi_web_form/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
(+69 files in other folders)
